k8s/spark-dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-dashboard
  namespace: spark
  labels:
    app: spark-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-dashboard
  template:
    metadata:
      labels:
        app: spark-dashboard
    spec:
      serviceAccountName: spark-dashboard
      containers:
        - name: dashboard
          image: spark-dashboard:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
#          readinessProbe:
#            httpGet:
#              path: /health
#              port: 5000
#            initialDelaySeconds: 10
#            periodSeconds: 10
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 5000
#            initialDelaySeconds: 30
#            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: spark-dashboard
  namespace: spark
  labels:
    app: spark-dashboard
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32050
      name: http
  selector:
    app: spark-dashboard
