k8s/spark-driver-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spark-drivers
  namespace: spark
spec:
  clusterIP: None
  selector:
    spark-role: driver
  ports:
    - port: 4040
      targetPort: 4040
      name: ui
